--- a/public/loadDetails.css
+++ b/public/loadDetails.css
@@ -140,15 +140,21 @@ header {
     border: .5px solid #222;
     font-weight: bold;
     color: #222;
-    min-width: 60px;
+    width: 255px;
     text-align: center;
     transition: background-color 0.5s ease;
+}
+
+.pallet-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pallet a {
     text-decoration: none;
     color: #222;
-    padding: 15px 5px;
+    padding: 360px 50px 5px 50px;
 }
 
 .pallet a:hover{
@@ -156,7 +162,19 @@ header {
 }
 
 .pallet:hover{
-    background-color: #222;
+    background-color: #fc5858;
+}
+
+/* Styling for the QR code container and images */
+.qr-code-container {
+    margin-bottom: 10px; /* Space below the QR code */
+    text-align: center;
+}
+
+.qr-code {
+    width: 280px; /* Limit the size of QR code image */
+    height: auto;
+    margin: 50px; /* Space between QR code and PalletID */
 }
 
 /* Footer Section Styles */
